Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Stefan Kröner

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -92,8 +92,6 @@
   "fileTooBig": "Die Datei überschreitet die maximal zulässige Größe von {limit} MB.",
   "fileUploadStatus": "Upload Status",
   "_fileUploadStatus.comment": "Upload notification title",
-  "tasks": "Aufgaben",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "fileUploadTitle": "Lade {uploading} von {total} Dateien hoch",
   "_fileUploadTitle.comment": "Upload notification title",
   "grapeCallPmInvitationContent": "lädt Sie zu einem Grape Call ein…",
@@ -130,7 +128,6 @@
   "hitKeyToCancelEditing": "Drücken Sie {key} um das Bearbeiten zu beenden.",
   "imageWithDescription": "Bild: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
-  "groups": "Gruppen",
   "imageWithoutDescription": "Bild: [Keine Beschreibung]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "importantMessages": "Wichtige Nachrichten",
@@ -177,10 +174,6 @@
   "inviteToOrgError": "Geben Sie gültige E-Mail Adressen ein, getrennt durch ein Komma.",
   "inviteToOrgNote": "Laden Sie mehrere Mitglieder ein, indem Sie ihre E-Mail Adressen mit Kommas trennen.",
   "inviteToOrgTitle": "Laden Sie Mitglieder in Ihre Organisation ein",
-  "introHlManageGroups": "Gruppen verwalten",
-  "_introHlManageGroups.comment": "Intro data hl.",
-  "introTextGroups": "Gruppen können öffentlich oder privat sein und orientieren sich oft an Projekten, Themen (z.B.: Kundenprojekt XY, Mittagessen) oder Abteilungen (z.B.: Marketing, Vertrieb).",
-  "_introTextGroups.comment": "Intro data text.",
   "inviteToOrganization": "Laden Sie ein neues Mitglied in Ihre Organisation ein",
   "joinGroup": "Einer Gruppe beitreten",
   "joinVideoConference": "Video Konferenz beitreten",
@@ -237,23 +230,11 @@
   "loginSubmit": "Jetzt anmelden",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
   "makeGroupPrivate": "Diese Gruppe privat machen",
-  "manageGroupsJoinableButton": "beitreten",
-  "_manageGroupsJoinableButton.comment": "Manage Groups Dialog: join button label",
   "makeGroupPublic": "Diese Gruppe öffentlich machen",
-  "manageGroupsJoinedButton": "verlassen",
-  "_manageGroupsJoinedButton.comment": "Manage Groups Dialog: leave button label",
-  "manageGroupsDialogTitle": "Gruppen verwalten",
-  "_manageGroupsDialogTitle.comment": "Manage Groups Dialog: dialog title",
   "manageMembers": "Mitglieder verwalten",
   "_manageMembers.comment": "Main org dropdown menu",
   "markdownTipsDialogTitle": "Tipps zum Markdown",
-  "manageGroupsLinkJoinable": "Verfügbare Gruppen",
-  "_manageGroupsLinkJoinable.comment": "Manage Groups Dialog: show joinable groups link",
   "markdownTipsPitch": "Wie man seine Chatnachrichten mit ein paar praktischen Stilelementen verbessert",
-  "manageGroupsLinkJoined": "Meine Gruppen",
-  "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
-  "manageGroupsCreateNew": "Neue Konversation",
-  "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
   "members": "Mitglieder",
   "membersList": "Mitgliederliste",
   "_membersList.comment": "Group Info Panel: link to members list of the current grou",
@@ -294,17 +275,15 @@
   "ncdGroupSearchPlaceholder": "Nach Gruppe suchen ...",
   "ncdGroupTab": "Gruppe",
   "_ncdGroupTab.comment": "tab title for group tab",
+  "ncdGroupsSeparator": "Meine Gruppen",
   "ncdInPmWithEveryPerson1": "Sie sind eine sehr kommunikative Person!",
   "ncdInPmWithEveryPerson2": "Alle Mitglieder schreiben bereits mit Ihnen. Bleiben Sie in Kontakt!",
   "ncdInviteToOrga": "Personen zu {organizationName} einladen",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
   "ncdJoinGroupHeader": "Treten Sie einer Gruppe bei oder erstellen Sie eine neue. Am besten ist es, Gruppen rund um eine Thema zu organisieren.",
   "ncdMemberOfEachGroup1": "Sie verpassen nichts.",
-  "enterGroupName": "Gruppe benennen ",
   "ncdMemberOfEachGroup2": "Sie sind bereits Mitglied in jeder Gruppe. Ihnen entgeht nichts, was öffentlich gesagt wird. Halten Sie die Gespräche am Laufen!",
-  "private": "Privat",
   "ncdNoGroups1": "Sie sind die Erste!",
-  "public": "Öffentlich",
   "ncdNoGroups2": "Es hat noch niemand eine Gruppe erstellt. Erstellen Sie doch einfach eine Gruppe rund um irgendein Thema, das Ihnen einfällt. Sie können später noch Personen einladen.",
   "ncdPeopleSearchNoOtherPeople1": "Einsam?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
@@ -312,6 +291,7 @@
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Schöner Name, aber leider konnte niemand in {orgName} gefunden werden.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
+  "ncdPeopleSeparator": "Personen, mit denen Sie bereits ein Gespräch führen",
   "ncdPersonSearchLabel": "Personensuche",
   "ncdPersonSearchPlaceholder": "Nach Person suchen ...",
   "ncdPersonTab": "Person",
@@ -396,8 +376,6 @@
   "_sent.comment": "message delivery status in tooltip",
   "settings": "Einstellungen",
   "sharedFiles": "Geteilte Dateien",
-  "showGroupMentions": "Gruppen-Erwähnungen anzeigen",
-  "_showGroupMentions.comment": "Option in messages mention sidebar.",
   "sharedInGroup": "Geteilt in {channelName}",
   "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
   "sharedInPm": "Geteilt mit {channelName}",
