--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -92,8 +92,6 @@
   "fileTooBig": "Le fichier dépasse la limite de taille de {limit}mb.",
   "fileUploadStatus": "État du chargement",
   "_fileUploadStatus.comment": "Upload notification title",
-  "tasks": "tâches",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "fileUploadTitle": "Téléchargement de {uploading} fichiers sur {total}",
   "_fileUploadTitle.comment": "Upload notification title",
   "grapeCallPmInvitationContent": "vous invite à un Grape Call...",
@@ -130,7 +128,6 @@
   "hitKeyToCancelEditing": "Appuyez sur {key} pour annuler l'édition.",
   "imageWithDescription": "Image : [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
-  "groups": "Groupes",
   "imageWithoutDescription": "Image : [Pas de description]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "importantMessages": "Messages importants",
@@ -177,10 +174,6 @@
   "inviteToOrgError": "Entrez des adresses e-mail valides séparées par une virgule.",
   "inviteToOrgNote": "Invitez plusieurs membres à la fois, en séparant simplement leurs adresses e-mail par une virgule.",
   "inviteToOrgTitle": "Invitez les membres de votre organisation",
-  "introHlManageGroups": "Gérer les groupes",
-  "_introHlManageGroups.comment": "Intro data hl.",
-  "introTextGroups": "Les groupes de discussion peuvent être publics ou privés et peuvent être basés sur des projets, des sujets (par exemple, le déjeuner quotidien) ou vos départements (par exemple, le marketing).",
-  "_introTextGroups.comment": "Intro data text.",
   "inviteToOrganization": "Invitez une nouvelle personne dans votre organisation",
   "joinGroup": "Rejoindre un groupe",
   "joinVideoConference": "Participer à la vidéoconférence",
@@ -237,23 +230,11 @@
   "loginSubmit": "Connectez-vous maintenant",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
   "makeGroupPrivate": "Rendre le groupe privé",
-  "manageGroupsJoinableButton": "rejoindre",
-  "_manageGroupsJoinableButton.comment": "Manage Groups Dialog: join button label",
   "makeGroupPublic": "Rendre le groupe public",
-  "manageGroupsJoinedButton": "quitter",
-  "_manageGroupsJoinedButton.comment": "Manage Groups Dialog: leave button label",
-  "manageGroupsDialogTitle": "Gérer les groupes",
-  "_manageGroupsDialogTitle.comment": "Manage Groups Dialog: dialog title",
   "manageMembers": "Gérer les membres",
   "_manageMembers.comment": "Main org dropdown menu",
   "markdownTipsDialogTitle": "Conseils pour le langage Markdown",
-  "manageGroupsLinkJoinable": "Groupes auxquels vous pouvez vous joindre",
-  "_manageGroupsLinkJoinable.comment": "Manage Groups Dialog: show joinable groups link",
   "markdownTipsPitch": "Comment améliorer vos messages de chat grâce à des styles astucieux",
-  "manageGroupsLinkJoined": "Groupes auxquels vous appartenez",
-  "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
-  "manageGroupsCreateNew": "nouvelle conversation",
-  "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
   "members": "Membres",
   "membersList": "Liste des membres",
   "_membersList.comment": "Group Info Panel: link to members list of the current grou",
@@ -294,17 +275,15 @@
   "ncdGroupSearchPlaceholder": "Recherchez un groupe ...",
   "ncdGroupTab": "Groupe",
   "_ncdGroupTab.comment": "tab title for group tab",
+  "ncdGroupsSeparator": "Groupes auxquels vous appartenez",
   "ncdInPmWithEveryPerson1": "Vous êtes une personne très communicative !",
   "ncdInPmWithEveryPerson2": "Tous les membres sont déjà en train de chatter avec vous. Restez en contact avec eux.",
   "ncdInviteToOrga": "Inviter les membres à {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
   "ncdJoinGroupHeader": "Rejoignez un groupe existant ou créez-en un nouveau. Les groupes sont mieux organisés autour d'un thème.",
   "ncdMemberOfEachGroup1": "Vous ne manquerez aucune discussion en cours !",
-  "enterGroupName": "Entrez le nom du groupe",
   "ncdMemberOfEachGroup2": "Vous faites déjà partie de tous les groupes existants ici, il n'y a rien qui puisse être dit publiquement sans votre avis. Vous pourriez vouloir vous entretenir.",
-  "private": "Privé",
   "ncdNoGroups1": "Vous êtes le premier !",
-  "public": "Public",
   "ncdNoGroups2": "Personne d'autre n'a encore créé de groupe. Ne soyez pas trop stressé et créez simplement le premier groupe autour d'un sujet qui vous vient à l'esprit. Vous pourrez inviter d'autres personnes à ce groupe plus tard.",
   "ncdPeopleSearchNoOtherPeople1": "Vous vous sentez seul ici ?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
@@ -312,6 +291,7 @@
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Joli nom, mais malheureusement personne dans {orgName} n'a pu être trouvé.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
+  "ncdPeopleSeparator": "Les personnes avec lesquelles vous avez déjà une conversation",
   "ncdPersonSearchLabel": "Recherche de personnes",
   "ncdPersonSearchPlaceholder": "Rechercher une personne ...",
   "ncdPersonTab": "Personne",
@@ -396,8 +376,6 @@
   "_sent.comment": "message delivery status in tooltip",
   "settings": "Paramètres",
   "sharedFiles": "Fichiers partagés",
-  "showGroupMentions": "montrer les mentions de groupe",
-  "_showGroupMentions.comment": "Option in messages mention sidebar.",
   "sharedInGroup": "Partagé dans {channelName}",
   "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
   "sharedInPm": "Partagé avec {channelName}",
