--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -92,8 +92,6 @@
   "fileTooBig": "Il file supera la dimensione di {limit} MB.",
   "fileUploadStatus": "Stato del caricamento",
   "_fileUploadStatus.comment": "Upload notification title",
-  "tasks": "compiti",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "fileUploadTitle": "Caricando {uploading} di {total} file",
   "_fileUploadTitle.comment": "Upload notification title",
   "grapeCallPmInvitationContent": "vi invita a una Grape Call..",
@@ -130,7 +128,6 @@
   "hitKeyToCancelEditing": "Premere {key} per annullare l'edizione.",
   "imageWithDescription": "Immagine: {description}",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
-  "groups": "Gruppi",
   "imageWithoutDescription": "Immagine: [Nessuna descrizione]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "importantMessages": "Messaggi importanti",
@@ -177,10 +174,6 @@
   "inviteToOrgError": "Inserire indirizzi e-mail validi separati da una virgola.",
   "inviteToOrgNote": "È possibile invitare più utenti contemporaneamente, basta separare i loro indirizzi e-mail con una virgola.",
   "inviteToOrgTitle": "Invita i membri dell'organizzazione",
-  "introHlManageGroups": "Gestisci gruppi",
-  "_introHlManageGroups.comment": "Intro data hl.",
-  "introTextGroups": "I gruppi di chat sono pubblici o privati e possono essere basati su progetti, argomenti (ad es. pranzo quotidiano) o sui vostri dipartimenti (ad es. marketing).",
-  "_introTextGroups.comment": "Intro data text.",
   "inviteToOrganization": "Invita una nuova persona dell'organizzazione",
   "joinGroup": "Unirsi a un gruppo",
   "joinVideoConference": "Partecipa alla videoconferenza",
@@ -237,23 +230,11 @@
   "loginSubmit": "Accedi ora",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
   "makeGroupPrivate": "Rendi privato il gruppo",
-  "manageGroupsJoinableButton": "Unirsi a",
-  "_manageGroupsJoinableButton.comment": "Manage Groups Dialog: join button label",
   "makeGroupPublic": "Rendei pubblico il gruppo",
-  "manageGroupsJoinedButton": "lascia",
-  "_manageGroupsJoinedButton.comment": "Manage Groups Dialog: leave button label",
-  "manageGroupsDialogTitle": "Gestire gruppi",
-  "_manageGroupsDialogTitle.comment": "Manage Groups Dialog: dialog title",
   "manageMembers": "Gestisci i membri",
   "_manageMembers.comment": "Main org dropdown menu",
   "markdownTipsDialogTitle": "Suggerimenti markdown",
-  "manageGroupsLinkJoinable": "Gruppi a cui unirsi",
-  "_manageGroupsLinkJoinable.comment": "Manage Groups Dialog: show joinable groups link",
   "markdownTipsPitch": "Come migliorare i messaggi di chat con alcuni stili eleganti",
-  "manageGroupsLinkJoined": "Gruppi di cui fai parte",
-  "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
-  "manageGroupsCreateNew": "nuova conversazione",
-  "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
   "members": "Membri",
   "membersList": "Elenco dei membri",
   "_membersList.comment": "Group Info Panel: link to members list of the current grou",
@@ -294,17 +275,15 @@
   "ncdGroupSearchPlaceholder": "Cerca un gruppo ...",
   "ncdGroupTab": "Gruppo",
   "_ncdGroupTab.comment": "tab title for group tab",
+  "ncdGroupsSeparator": "Gruppi di cui fai parte",
   "ncdInPmWithEveryPerson1": "Sei una persona molto comunicativa!",
   "ncdInPmWithEveryPerson2": "Tutti i membri stanno già chattando con te. Resta in contatto con loro.",
   "ncdInviteToOrga": "Invita i membri a {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
   "ncdJoinGroupHeader": "Unisciti a un gruppo esistente o creane uno nuovo. I gruppi sono meglio organizzati intorno ad un argomento.",
   "ncdMemberOfEachGroup1": "Non ti perderai nessuna chiacchierata in corso!",
-  "enterGroupName": "Inserire il nome del gruppo",
-  "ncdMemberOfEachGroup2": "Sei già parte di ogni gruppo esistente qui, non c'è niente che possa essere detto pubblicamente senza il tuo avviso. Potresti voler fare delle conversazioni.",
-  "private": "Privato",
+  "ncdMemberOfEachGroup2": "Sei già parte di ogni gruppo esistente, non c'è niente che possa essere detto pubblicamente senza il tuo avviso. Potresti voler fare delle conversazioni.",
   "ncdNoGroups1": "Sei il primo!",
-  "public": "Pubblico",
   "ncdNoGroups2": "Nessun altro ha ancora creato un gruppo. Non essere troppo stressato e crea semplicemente il primo gruppo su un argomento che ti viene in mente. Puoi invitare altre persone a questo gruppo più tardi.",
   "ncdPeopleSearchNoOtherPeople1": "Ti senti solo qui?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
@@ -312,6 +291,7 @@
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Bel nome, ma purtroppo non è stato possibile trovare nessuno in {orgName}.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
+  "ncdPeopleSeparator": "Persone con cui hai già una conversazione",
   "ncdPersonSearchLabel": "Ricerca di persone",
   "ncdPersonSearchPlaceholder": "Cerca una persona ...",
   "ncdPersonTab": "Persona",
@@ -396,8 +376,6 @@
   "_sent.comment": "message delivery status in tooltip",
   "settings": "Impostazioni",
   "sharedFiles": "File condivisi",
-  "showGroupMentions": "mostra le menzioni del gruppo",
-  "_showGroupMentions.comment": "Option in messages mention sidebar.",
   "sharedInGroup": "Condiviso in {channelName}",
   "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
   "sharedInPm": "Condiviso con {channelName}",
