--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -1,6 +1,6 @@
 {
-  "InviteToOrgMessage": "Do wiadomości z zaproszeniem możesz dodać osobistą wiadomość.",
-  "aboutMemberTitle": "O tym członku",
+  "InviteToOrgMessage": "Możesz dodać osobistą wiadomość do wiadomości z zaproszeniem ",
+  "aboutMemberTitle": "O tym użytkowniku",
   "_aboutMemberTitle.comment": "Member profile sidebar, about user title.",
   "accountSettings": "Ustawienia konta",
   "_accountSettings.comment": "Main org dropdown menu",
@@ -27,7 +27,7 @@
   "clickToTryAgain": "kliknij tutaj, aby spróbować ponownie",
   "close": "Zamknij",
   "closeLower": "zamknij",
-  "closeTakeoverDialog": "Close",
+  "closeTakeoverDialog": "Zamknij",
   "_closeTakeoverDialog.comment": "aria-label for close button in takeover dialog component",
   "codeSnippets": "Fragment kodu",
   "_codeSnippets.comment": "Title",
@@ -92,8 +92,6 @@
   "fileTooBig": "Plik przekracza limit rozmiaru {limit}mb.",
   "fileUploadStatus": "Stan ładowania",
   "_fileUploadStatus.comment": "Upload notification title",
-  "tasks": "zadania",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "fileUploadTitle": "Wgrywanie {uploading} plików {total}",
   "_fileUploadTitle.comment": "Upload notification title",
   "grapeCallPmInvitationContent": "zaproszenie na Grape Call…",
@@ -130,7 +128,6 @@
   "hitKeyToCancelEditing": "Naciśnij {key} przycisk, aby anulować edycję.",
   "imageWithDescription": "Obrazek: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
-  "groups": "Grupy",
   "imageWithoutDescription": "Obrazek: [Brak opisu]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "importantMessages": "Ważne wiadomości",
@@ -159,7 +156,7 @@
   "_introTextPm.comment": "Intro data text.",
   "introTextSearch": "Szukaj konwersacji, przeglądaj wzmianki czy przeglądaj udostępnione pliki - te poręczne pomocniki znacznie ułatwią Ci życie.",
   "_introTextSearch.comment": "Intro search text.",
-  "introTextSearchBrowser": "Wyszukuj terminy, pliki i inne dane z integracji usług (np. Google Apps lub Exchange) lub przeglądaj strony internetowe (np. GIF-y). Aby otworzyć Grape Search kliknij przycisk lub wciśnij #",
+  "introTextSearchBrowser": "Wyszukuj terminy, pliki i inne dane z integracji usług (np. Google Apps lub Exchange) lub przeglądaj strony internetowe (np. GIF-y). Aby otworzyć {product} Search kliknij przycisk lub wciśnij #",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introTextWelcome": "{product} to aplikacja na czacie dla zespołów. Pomożemy Ci sprawić, aby komunikacja w Twoim zespole była bardziej efektywna, produktywna i przyjemna. Jeśli jeszcze nie korzystałeś z {product}, zalecamy skorzystanie z naszego 90 sekundowego tutorialu.",
   "_introTextWelcome.comment": "Intro welcome text.",
@@ -169,7 +166,7 @@
   "inviteMembersNow": "Zaproś teraz użytkowników",
   "inviteMoreToGroup": "Zaproś więcej użytkowników do tej grupy",
   "_inviteMoreToGroup.comment": "No Content: invite members to the group",
-  "inviteMoreToGroupGroupInfo": "Zaproś więcej członków do tej grupy",
+  "inviteMoreToGroupGroupInfo": "Zaproś więcej użytkowników do tej grupy",
   "_inviteMoreToGroupGroupInfo.comment": "Group Info Panel: invite members to the group",
   "inviteNewMembers": "Zapraszanie nowych użytkowników",
   "_inviteNewMembers.comment": "Main org dropdown menu",
@@ -177,10 +174,6 @@
   "inviteToOrgError": "Wpisz prawidłowy adres e-mail oddzielony przecinkiem.",
   "inviteToOrgNote": "Zaproś wielu użytkowników na raz, po prostu oddziel ich adresy e-mailowe przecinkiem.",
   "inviteToOrgTitle": "Zaproś użytkowników do swojej organizacji",
-  "introHlManageGroups": "Zarządzaj grupami",
-  "_introHlManageGroups.comment": "Intro data hl.",
-  "introTextGroups": "Grupy czatowe mogą być publiczne lub prywatne i mogą opierać się na projektach, tematach (np. codzienny lunch) lub Twoich działach (np. marketing).",
-  "_introTextGroups.comment": "Intro data text.",
   "inviteToOrganization": "Zaproś nowego użytkownika do swojej organizacji",
   "joinGroup": "Dołącz do grupy",
   "joinVideoConference": "Przyłącz się do wideokonferencji",
@@ -237,23 +230,11 @@
   "loginSubmit": "Zaloguj się teraz",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
   "makeGroupPrivate": "Uczynić grupę prywatną",
-  "manageGroupsJoinableButton": "dołącz",
-  "_manageGroupsJoinableButton.comment": "Manage Groups Dialog: join button label",
   "makeGroupPublic": "Zmień grupę na publiczną",
-  "manageGroupsJoinedButton": "opuść",
-  "_manageGroupsJoinedButton.comment": "Manage Groups Dialog: leave button label",
-  "manageGroupsDialogTitle": "Zarządzanie grupami",
-  "_manageGroupsDialogTitle.comment": "Manage Groups Dialog: dialog title",
   "manageMembers": "Zarządzaj użytkownikami",
   "_manageMembers.comment": "Main org dropdown menu",
   "markdownTipsDialogTitle": "Wskazówki Markdown",
-  "manageGroupsLinkJoinable": "Grupy, do których można dołączyć",
-  "_manageGroupsLinkJoinable.comment": "Manage Groups Dialog: show joinable groups link",
   "markdownTipsPitch": "Jak poprawić swoje wiadomości na czacie za pomocą kilku zgrabnych stylów",
-  "manageGroupsLinkJoined": "Grupy, do których należysz",
-  "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
-  "manageGroupsCreateNew": "nowa konwersacja",
-  "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
   "members": "Użytkownicy",
   "membersList": "Lista użytkowników",
   "_membersList.comment": "Group Info Panel: link to members list of the current grou",
@@ -264,12 +245,12 @@
   "moreServices": "Więcej usług",
   "_moreServices.comment": "More Services button in message nlp create task dialog.",
   "muteAllNotifications": "Zablokuj wszystkie powiadomienia dla tej grupy na wszystkich swoich urządzeniach",
-  "muteAllNotificationsHint": "Ta grupa jest całkowicie wyciszona na wszystkich Twoich urządzeniach. Nie otrzymasz już żadnych powiadomień z\n        {channel} - ale nadal możesz wrócić w każdej chwili, aby sprawdzić nowe wiadomości.\n        Jeśli chcesz opuścić grupę i usunąć ją z paska bocznego - kliknij tutaj {leaveButton}",
+  "muteAllNotificationsHint": "Ta grupa jest całkowicie wyciszona na wszystkich Twoich urządzeniach. Nie otrzymasz już żadnych powiadomień z {channel} - ale nadal możesz wrócić w każdej chwili, aby sprawdzić nowe wiadomości. Jeśli chcesz opuścić grupę i usunąć ją z paska bocznego - kliknij tutaj {leaveButton}",
   "muteGroupTitle": "Wycisz tą grupę",
   "ncdCreateGroup": "Utwórz nową grupę",
-  "ncdCreateRoomPeopleSearchNotFound": "Nie udało się znaleźć członka o nazwie {searchTerm}.",
+  "ncdCreateRoomPeopleSearchNotFound": "Nie udało się znaleźć użytkownika o nazwie {searchTerm}.",
   "_ncdCreateRoomPeopleSearchNotFound.comment": "shown when people search in create room dialog returns 0 results",
-  "ncdGroupCreateButton": "Tworzenie grupy",
+  "ncdGroupCreateButton": "Stwórz grupę",
   "ncdGroupCreateCancelButton": "Anuluj",
   "ncdGroupDescriptionDescription": "Pomóż innym zrozumieć cel istnienia tej grupy.",
   "_ncdGroupDescriptionDescription.comment": "text area description",
@@ -277,43 +258,42 @@
   "_ncdGroupDescriptionLabel.comment": "text area label",
   "ncdGroupMembersDescription": "Rozważ dodanie innych osób w celu ożywienia dyskusji. Możesz to zrobić również później.",
   "_ncdGroupMembersDescription.comment": "description for group members input",
-  "ncdGroupMembersLabel": "Członkowie",
+  "ncdGroupMembersLabel": "Użytkownicy",
   "_ncdGroupMembersLabel.comment": "group members input label",
-  "ncdGroupMembersSelected": "Wybrani członkowie:",
-  "ncdGroupNameDescription": "Powinien reprezentować tematykę grupy.",
+  "ncdGroupMembersSelected": "Wybrani użytkownicy:",
+  "ncdGroupNameDescription": "Powinno reprezentować tematykę grupy.",
   "_ncdGroupNameDescription.comment": "text field description",
   "ncdGroupNameLabel": "Nazwa grupy",
   "_ncdGroupNameLabel.comment": "text field label",
   "ncdGroupPrivateHelpText": "Tylko członkowie grupy mogą przeglądać grupę prywatną i zapraszać do niej inne osoby.",
   "_ncdGroupPrivateHelpText.comment": "switch help text",
-  "ncdGroupPrivateLabel": "Uczynić grupę prywatną",
+  "ncdGroupPrivateLabel": "Zmień status grupy na prywatną.",
   "_ncdGroupPrivateLabel.comment": "switch label",
-  "ncdGroupSearchLabel": "Wyszukiwanie grupowe",
+  "ncdGroupSearchLabel": "Szukaj grupy",
   "ncdGroupSearchNotFound": "Ładna nazwa grupy, ale niestety nikt inny nie stworzył grupy o takiej nazwie.",
   "_ncdGroupSearchNotFound.comment": "shown when groups search returns 0 results",
-  "ncdGroupSearchPlaceholder": "Wyszukaj grupę ...",
+  "ncdGroupSearchPlaceholder": "Szukaj grupy...",
   "ncdGroupTab": "Grupa",
   "_ncdGroupTab.comment": "tab title for group tab",
+  "ncdGroupsSeparator": "Grupy, do których należysz",
   "ncdInPmWithEveryPerson1": "Jesteś bardzo komunikatywną osobą!",
-  "ncdInPmWithEveryPerson2": "Wszyscy członkowie już z Tobą rozmawiają. Pozostań z nimi w kontakcie.",
-  "ncdInviteToOrga": "Zaproś członków do {organizationName}",
+  "ncdInPmWithEveryPerson2": "Wszyscy użytkownicy już z Tobą rozmawiają. Pozostań z nimi w kontakcie.",
+  "ncdInviteToOrga": "Zaproś użytkowników do {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
   "ncdJoinGroupHeader": "Dołącz do istniejącej grupy lub stwórz nową. Grupy najlepiej zorganizować wokół jakiegoś tematu.",
   "ncdMemberOfEachGroup1": "Nie przegapisz żadnej rozmowy!",
-  "enterGroupName": "Wpisz nazwę grupy",
-  "ncdMemberOfEachGroup2": "Jesteś już częścią każdej istniejącej grupy tutaj, nie ma nic, co może być publicznie powiedział bez Twojego zawiadomienia. Możesz chcieć rozmawiać.",
-  "private": "Prywatna",
+  "ncdMemberOfEachGroup2": "Jesteś już częścią każdej istniejącej grupy tutaj. Otrzymasz powiadomienie o wszystkich publicznych wiadomościach. Możesz kontynuować rozmowy.",
   "ncdNoGroups1": "Jesteś pierwszy!",
-  "public": "Publiczna",
   "ncdNoGroups2": "Nikt jeszcze nie utworzył grupy. Nie stresuj się i stwórz pierwszą grupę na temat, który przychodzi Ci do głowy. Później możesz zaprosić do niej inne osoby.",
   "ncdPeopleSearchNoOtherPeople1": "Czujesz się tu samotny?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
-  "ncdPeopleSearchNoOtherPeople2": "Wygląda na to, że {organizationName} nie ma jeszcze innych członków niż Ty, więc dlaczego by nie zaprosić kogoś? Jak tylko ktoś taki dołączy, możesz wrócić i rozpocząć rozmowę.",
+  "ncdPeopleSearchNoOtherPeople2": "Wygląda na to, że {organizationName} nie ma jeszcze innych użytkowników niż Ty, więc dlaczego by nie zaprosić kogoś? Jak tylko ktoś taki dołączy, możesz wrócić i rozpocząć rozmowę.",
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Ładna nazwa, ale niestety nie udało się znaleźć nikogo w {orgName}.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
+  "ncdPeopleSeparator": "Ludzie, z którymi już rozmawiasz",
   "ncdPersonSearchLabel": "Wyszukiwanie osób",
-  "ncdPersonSearchPlaceholder": "Szukaj osoby ...",
+  "ncdPersonSearchPlaceholder": "Szukaj osoby...",
   "ncdPersonTab": "Osoba",
   "_ncdPersonTab.comment": "tab title for person tab",
   "ncdTitle": "Nowa rozmowa",
@@ -396,8 +376,6 @@
   "_sent.comment": "message delivery status in tooltip",
   "settings": "Ustawienia",
   "sharedFiles": "Pliki współdzielone",
-  "showGroupMentions": "pokaż wzmianki o grupie",
-  "_showGroupMentions.comment": "Option in messages mention sidebar.",
   "sharedInGroup": "Udostępnij w {channelName}",
   "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
   "sharedInPm": "Udostępnij z {channelName}",
