--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -92,8 +92,6 @@
   "fileTooBig": "El archivo excede el límite de tamaño de {limit} mb.",
   "fileUploadStatus": "Estado de la carga",
   "_fileUploadStatus.comment": "Upload notification title",
-  "tasks": "tareas",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "fileUploadTitle": "Subiendo {uploading} de {total} archivos",
   "_fileUploadTitle.comment": "Upload notification title",
   "grapeCallPmInvitationContent": "le invita a una Grape Call...",
@@ -130,7 +128,6 @@
   "hitKeyToCancelEditing": "Pulsa {key} para cancelar la edición.",
   "imageWithDescription": "Imagen: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
-  "groups": "Grupos",
   "imageWithoutDescription": "Imagen: [Sin descripción]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "importantMessages": "Mensajes importantes",
@@ -177,10 +174,6 @@
   "inviteToOrgError": "Introducir las direcciones de correo electrónico válidas separadas por una coma.",
   "inviteToOrgNote": "Invitar a varios miembros a la vez, tan sólo separe sus direcciones de correo electrónico con una coma.",
   "inviteToOrgTitle": "Invitar a los miembros a su organización",
-  "introHlManageGroups": "Gestionar los grupos",
-  "_introHlManageGroups.comment": "Intro data hl.",
-  "introTextGroups": "Los grupos de chat pueden ser públicos o privados y pueden basarse en proyectos, temas (por ejemplo, el almuerzo diario) o en sus departamentos (por ejemplo, marketing).",
-  "_introTextGroups.comment": "Intro data text.",
   "inviteToOrganization": "Invitar a una nueva persona a su organización",
   "joinGroup": "Únase a un grupo",
   "joinVideoConference": "Participar a la videoconferencia",
@@ -237,23 +230,11 @@
   "loginSubmit": "Iniciar sesión ahora",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
   "makeGroupPrivate": "Hacer privado el grupo",
-  "manageGroupsJoinableButton": "unirse a",
-  "_manageGroupsJoinableButton.comment": "Manage Groups Dialog: join button label",
   "makeGroupPublic": "Hacer público el grupo",
-  "manageGroupsJoinedButton": "abandonar",
-  "_manageGroupsJoinedButton.comment": "Manage Groups Dialog: leave button label",
-  "manageGroupsDialogTitle": "Gestionar los grupos",
-  "_manageGroupsDialogTitle.comment": "Manage Groups Dialog: dialog title",
   "manageMembers": "Gestionar los miembros",
   "_manageMembers.comment": "Main org dropdown menu",
   "markdownTipsDialogTitle": "Consejos para markdown",
-  "manageGroupsLinkJoinable": "Grupos a los que puede unirse",
-  "_manageGroupsLinkJoinable.comment": "Manage Groups Dialog: show joinable groups link",
   "markdownTipsPitch": "Cómo mejorar tus mensajes de chat con algunos estilos ingeniosos",
-  "manageGroupsLinkJoined": "Grupos a los que pertenece",
-  "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
-  "manageGroupsCreateNew": "nueva conversación",
-  "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
   "members": "Miembros",
   "membersList": "Lista de miembros",
   "_membersList.comment": "Group Info Panel: link to members list of the current grou",
@@ -294,17 +275,15 @@
   "ncdGroupSearchPlaceholder": "Buscar un grupo ...",
   "ncdGroupTab": "Grupo",
   "_ncdGroupTab.comment": "tab title for group tab",
+  "ncdGroupsSeparator": "Grupos a los que pertenece",
   "ncdInPmWithEveryPerson1": "Eres una persona muy comunicativa",
   "ncdInPmWithEveryPerson2": "Todos los miembros ya están chateando contigo. Mantén el contacto con ellos.",
   "ncdInviteToOrga": "Invitar a los miembros a {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
   "ncdJoinGroupHeader": "Únete a un grupo existente o crea uno nuevo. Los grupos se organizan mejor en torno a un tema.",
   "ncdMemberOfEachGroup1": "No te perderás ninguna charla",
-  "enterGroupName": "Introducir el nombre del grupo",
   "ncdMemberOfEachGroup2": "Ya formas parte de todos los grupos existentes aquí, no hay nada que se pueda decir públicamente sin tu opinión. Es posible que desees hacer conversaciones.",
-  "private": "Privado",
   "ncdNoGroups1": "¡Eres el primero!",
-  "public": "Público",
   "ncdNoGroups2": "Nadie más ha creado un grupo todavía. No te agobies y crea el primer grupo en torno a un tema que se te ocurra. Más adelante podrás invitar a otras personas a este grupo.",
   "ncdPeopleSearchNoOtherPeople1": "¿Te sientes solo aquí?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
@@ -312,6 +291,7 @@
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Bonito nombre, pero desgraciadamente no se ha podido encontrar a nadie en {orgName}.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
+  "ncdPeopleSeparator": "Personas con las que ya tienes una conversación",
   "ncdPersonSearchLabel": "Búsqueda de personas",
   "ncdPersonSearchPlaceholder": "Buscar una persona ...",
   "ncdPersonTab": "Persona",
@@ -396,8 +376,6 @@
   "_sent.comment": "message delivery status in tooltip",
   "settings": "Configuración",
   "sharedFiles": "Archivos compartidos",
-  "showGroupMentions": "mostrar menciones de grupo",
-  "_showGroupMentions.comment": "Option in messages mention sidebar.",
   "sharedInGroup": "Compartido en {channelName}",
   "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
   "sharedInPm": "Compartido con {channelName}",
