--- a/i18n/translations/uk.json
+++ b/i18n/translations/uk.json
@@ -92,8 +92,6 @@
   "fileTooBig": "Розмір файлу перевищує обмеження в {limit} мб.",
   "fileUploadStatus": "Статус завантаження",
   "_fileUploadStatus.comment": "Upload notification title",
-  "tasks": "завдання",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "fileUploadTitle": "Завантаження {uploading} з {total} файлів",
   "_fileUploadTitle.comment": "Upload notification title",
   "grapeCallPmInvitationContent": "запрошує вас на Grape Call...",
@@ -130,7 +128,6 @@
   "hitKeyToCancelEditing": "Натисніть клавішу {key}, щоб скасувати редагування.",
   "imageWithDescription": "Зображення: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
-  "groups": "Групи",
   "imageWithoutDescription": "Зображення: [Без Опису]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "importantMessages": "Важливі Повідомлення",
@@ -177,10 +174,6 @@
   "inviteToOrgError": "Введіть дійсні адреси e-mail, розділяючи їх комою.",
   "inviteToOrgNote": "Запросіть кількох учасників одночасно, просто відокремте їх e-mail адреси комами.",
   "inviteToOrgTitle": "Запросіть учасників до своєї організації",
-  "introHlManageGroups": "Управляти групами",
-  "_introHlManageGroups.comment": "Intro data hl.",
-  "introTextGroups": "Групи чату можуть бути загальнодоступними або приватними і можуть базуватися на проектах, темах (наприклад, щоденний обід) або ваших підрозділах (наприклад, маркетинг).",
-  "_introTextGroups.comment": "Intro data text.",
   "inviteToOrganization": "Запросіть нову особу до своєї організації",
   "joinGroup": "Приєднатися до групи",
   "joinVideoConference": "Приєднатися до відеоконференції",
@@ -237,23 +230,11 @@
   "loginSubmit": "Увійдіть зараз",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
   "makeGroupPrivate": "Зробити групу приватною",
-  "manageGroupsJoinableButton": "приєднатися",
-  "_manageGroupsJoinableButton.comment": "Manage Groups Dialog: join button label",
   "makeGroupPublic": "Зробити групу загальнодоступною",
-  "manageGroupsJoinedButton": "покинути",
-  "_manageGroupsJoinedButton.comment": "Manage Groups Dialog: leave button label",
-  "manageGroupsDialogTitle": "Управляти Групами",
-  "_manageGroupsDialogTitle.comment": "Manage Groups Dialog: dialog title",
   "manageMembers": "Управляти Учасниками",
   "_manageMembers.comment": "Main org dropdown menu",
   "markdownTipsDialogTitle": "Поради щодо розмітки даних (Markdown)",
-  "manageGroupsLinkJoinable": "Групи, до яких ви можете приєднатися",
-  "_manageGroupsLinkJoinable.comment": "Manage Groups Dialog: show joinable groups link",
   "markdownTipsPitch": "Як покращити свої повідомлення в чаті за допомогою деяких елегантних стилів",
-  "manageGroupsLinkJoined": "Групи, до яких ви належите",
-  "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
-  "manageGroupsCreateNew": "нова розмова",
-  "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
   "members": "Учасники",
   "membersList": "Список Учасників",
   "_membersList.comment": "Group Info Panel: link to members list of the current grou",
@@ -294,17 +275,15 @@
   "ncdGroupSearchPlaceholder": "Шукати групу ...",
   "ncdGroupTab": "Група",
   "_ncdGroupTab.comment": "tab title for group tab",
+  "ncdGroupsSeparator": "Групи, до яких ви належите",
   "ncdInPmWithEveryPerson1": "Ти дуже комунікативна людина!",
   "ncdInPmWithEveryPerson2": "Усі учасники вже спілкуються з вами в чаті. Підтримуйте з ними зв’язок.",
   "ncdInviteToOrga": "Запросити учасників до організації {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
   "ncdJoinGroupHeader": "Приєднайтеся до існуючої групи або створіть нову. Групи найкраще організовувати за темою.",
   "ncdMemberOfEachGroup1": "Ви не пропустите жодного чату!",
-  "enterGroupName": "Введіть назву групи",
   "ncdMemberOfEachGroup2": "Ви вже є частиною кожної існуючої групи, нічого не можна публічно сказати без вашого попередження. Можливо, ви захочете вести розмову.",
-  "private": "Приватнa",
   "ncdNoGroups1": "Ти перший!",
-  "public": "Загальнодоступна",
   "ncdNoGroups2": "Ще ніхто не створив групу. Не будьте занадто напруженими і просто створіть першу групу навколо теми, яка вам спадає на думку. Ви можете запросити інших людей до цієї групи пізніше.",
   "ncdPeopleSearchNoOtherPeople1": "Відчуваєте тут самотність?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
@@ -312,6 +291,7 @@
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Гарне ім’я, але, на жаль, нікого в організації {orgName} знайти не вдалося.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
+  "ncdPeopleSeparator": "Люди, з якими ви вже спілкуєтесь",
   "ncdPersonSearchLabel": "Пошук особи",
   "ncdPersonSearchPlaceholder": "Шукати людину ...",
   "ncdPersonTab": "Людина",
@@ -396,8 +376,6 @@
   "_sent.comment": "message delivery status in tooltip",
   "settings": "Налаштування",
   "sharedFiles": "Спільні Файли",
-  "showGroupMentions": "шоу-група згадує",
-  "_showGroupMentions.comment": "Option in messages mention sidebar.",
   "sharedInGroup": "Надано доступ у {channelName}",
   "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
   "sharedInPm": "Спільно з {channelName}",
