Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -94,6 +94,7 @@
   "_fileUploadStatus.comment": "Upload notification title",
   "fileUploadTitle": "Lade {uploading} von {total} Dateien hoch",
   "_fileUploadTitle.comment": "Upload notification title",
+  "filterConversations": "Konversationen filtern..",
   "grapeCallPmInvitationContent": "lädt Sie zu einem Grape Call ein…",
   "_grapeCallPmInvitationContent.comment": "Browser notification for incoming pm Grape Call.",
   "grapeCallPmMissedContent": "hat Sie angerufen",
