--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -94,6 +94,7 @@
   "_fileUploadStatus.comment": "Upload notification title",
   "fileUploadTitle": "Téléchargement de {uploading} fichiers sur {total}",
   "_fileUploadTitle.comment": "Upload notification title",
+  "filterConversations": "Filtrer les conversations...",
   "grapeCallPmInvitationContent": "vous invite à un Grape Call...",
   "_grapeCallPmInvitationContent.comment": "Browser notification for incoming pm Grape Call.",
   "grapeCallPmMissedContent": "vous a appelé",
