Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -281,6 +281,7 @@
   "ncdInPmWithEveryPerson2": "Wszyscy użytkownicy już z Tobą rozmawiają. Pozostań z nimi w kontakcie.",
   "ncdInviteToOrga": "Zaproś użytkowników do {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
+  "ncdJoinButDontCreateGroupHeader": "Widoczne są wszystkie grupy, do których masz dostęp. Twoja rola użytkownika nie pozwala na tworzenie grup.",
   "ncdJoinGroupHeader": "Dołącz do istniejącej grupy lub stwórz nową. Grupy najlepiej zorganizować wokół jakiegoś tematu.",
   "ncdMemberOfEachGroup1": "Nie przegapisz żadnej rozmowy!",
   "ncdMemberOfEachGroup2": "Jesteś już częścią każdej istniejącej grupy tutaj. Otrzymasz powiadomienie o wszystkich publicznych wiadomościach. Możesz kontynuować rozmowy.",
@@ -369,7 +370,6 @@
   "replyWithMessage": "Odpowiedz wiadomością",
   "result": "Wynik",
   "_result.comment": "Title",
-  "searchMembersAndGroups": "Szukaj użytkownika lub grupy…",
   "searchMessages": "Szukaj wiadomości",
   "searchSidebarTitle": "Wyniki wyszukiwania",
   "sendInvites": "Wyślij zaproszenie na e-mail",
