--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -281,6 +281,7 @@
   "ncdInPmWithEveryPerson2": "Todos los miembros ya están chateando contigo. Mantén el contacto con ellos.",
   "ncdInviteToOrga": "Invitar a los miembros a {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
+  "ncdJoinButDontCreateGroupHeader": "Puede ver todos los grupos a los que tiene acceso. Su rol de usuario no le permite crear grupos.",
   "ncdJoinGroupHeader": "Únete a un grupo existente o crea uno nuevo. Los grupos se organizan mejor en torno a un tema.",
   "ncdMemberOfEachGroup1": "No te perderás ninguna charla",
   "ncdMemberOfEachGroup2": "Ya formas parte de todos los grupos existentes aquí, no hay nada que se pueda decir públicamente sin tu opinión. Es posible que desees hacer conversaciones.",
@@ -369,7 +370,6 @@
   "replyWithMessage": "Responder con un mensaje",
   "result": "Resultado",
   "_result.comment": "Title",
-  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "searchMessages": "Buscar mensajes",
   "searchSidebarTitle": "Resultados de la búsqueda",
   "sendInvites": "Enviar correos electrónicos de invitación",
