--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -281,6 +281,7 @@
   "ncdInPmWithEveryPerson2": "Tutti i membri stanno già chattando con te. Resta in contatto con loro.",
   "ncdInviteToOrga": "Invita i membri a {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
+  "ncdJoinButDontCreateGroupHeader": "Puoi vedere tutti i gruppi a cui hai accesso. Il tuo ruolo utente non ti permette di creare gruppi.",
   "ncdJoinGroupHeader": "Unisciti a un gruppo esistente o creane uno nuovo. I gruppi sono meglio organizzati intorno ad un argomento.",
   "ncdMemberOfEachGroup1": "Non ti perderai nessuna chiacchierata in corso!",
   "ncdMemberOfEachGroup2": "Sei già parte di ogni gruppo esistente, non c'è niente che possa essere detto pubblicamente senza il tuo avviso. Potresti voler fare delle conversazioni.",
@@ -369,7 +370,6 @@
   "replyWithMessage": "Rispondi con un messaggio",
   "result": "Risultato",
   "_result.comment": "Title",
-  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "searchMessages": "Cerca messaggi",
   "searchSidebarTitle": "Risultati della ricerca",
   "sendInvites": "Invia e-mail di invito",
