Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -282,6 +282,7 @@
   "ncdInviteToOrga": "Invite members to {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
   "ncdJoinGroupHeader": "Join an existing group or create a new one. Groups are best organized around a topic.",
+  "ncdJoinButDontCreateGroupHeader": "You can see all groups which you have access to. Your user role does not allow you to create new groups.",
   "ncdMemberOfEachGroup1": "You won't miss any chat going on!",
   "ncdMemberOfEachGroup2": "You're already part of every existing group here, there is nothing that can be publicly said without your notice. You may want to keep the conversations going.",
   "ncdNoGroups1": "You're the first!",
