Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -370,6 +370,7 @@
   "replyWithMessage": "Mit einer Nachricht antworten",
   "result": "Ergebnis",
   "_result.comment": "Title",
+  "searchMembersAndGroups": "Mitglieder und Gruppen suchen…",
   "searchMessages": "Nachrichten durchsuchen",
   "searchSidebarTitle": "Suchergebnisse",
   "sendInvites": "Einladungen per E-Mail verschicken",
