--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -370,6 +370,7 @@
   "replyWithMessage": "Reply with a message",
   "result": "Result",
   "_result.comment": "Title",
+  "searchMembersAndGroups": "Search members and groups…",
   "searchMessages": "Search messages",
   "searchSidebarTitle": "Search Results",
   "sendInvites": "Send invitation e-mails",
