--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -370,6 +370,7 @@
   "replyWithMessage": "Responder con un mensaje",
   "result": "Resultado",
   "_result.comment": "Title",
+  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "searchMessages": "Buscar mensajes",
   "searchSidebarTitle": "Resultados de la búsqueda",
   "sendInvites": "Enviar correos electrónicos de invitación",
