--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -370,6 +370,7 @@
   "replyWithMessage": "Répondre par un message",
   "result": "Résultat",
   "_result.comment": "Title",
+  "searchMembersAndGroups": "Rechercher des membres et des groupes...",
   "searchMessages": "Recherche de messages",
   "searchSidebarTitle": "Résultats de la recherche",
   "sendInvites": "Envoyer des e-mail d'invitation",
