--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -370,6 +370,7 @@
   "replyWithMessage": "Rispondi con un messaggio",
   "result": "Risultato",
   "_result.comment": "Title",
+  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "searchMessages": "Cerca messaggi",
   "searchSidebarTitle": "Risultati della ricerca",
   "sendInvites": "Invia e-mail di invito",
