--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -370,6 +370,7 @@
   "replyWithMessage": "Odpowiedz wiadomością",
   "result": "Wynik",
   "_result.comment": "Title",
+  "searchMembersAndGroups": "Szukaj użytkownika lub grupy…",
   "searchMessages": "Szukaj wiadomości",
   "searchSidebarTitle": "Wyniki wyszukiwania",
   "sendInvites": "Wyślij zaproszenie na e-mail",
